--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.6.0",
     "@google/genai": "^0.13.0",
+    "@modelcontextprotocol/sdk": "^1.20.1",
     "@monaco-editor/react": "^4.7.0",
     "@prisma/client": "^6.12.0",
     "@radix-ui/react-accordion": "^1.2.11",
