--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate",
@@ -37,6 +37,8 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toast": "^1.2.14",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@react-email/render": "^1.4.0",
+    "@react-pdf/renderer": "^4.3.1",
     "@types/dompurify": "^3.0.5",
     "@types/vscode": "^1.102.0",
     "@uiw/react-md-editor": "^4.0.6",
@@ -69,6 +71,7 @@
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.4",
     "redis": "^5.8.1",
+    "resend": "^6.2.2",
     "sonner": "^2.0.6",
     "svix": "^1.67.0",
     "tailwind-merge": "^3.3.0",
