--- a/package.json
+++ b/package.json
@@ -65,12 +65,16 @@
     "next": "^15.3.4",
     "next-auth": "^5.0.0-beta.4",
     "next-themes": "^0.4.6",
+    "prism-themes": "^1.9.0",
+    "prismjs": "^1.30.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-to-pdf": "^2.0.1",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.4",
     "redis": "^5.8.1",
+    "rehype-prism-plus": "^2.0.1",
+    "remark-inline-code-language": "^1.0.1",
     "resend": "^6.2.2",
     "sonner": "^2.0.6",
     "svix": "^1.67.0",
