--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@google/genai": "^0.13.0",
     "@modelcontextprotocol/sdk": "^1.20.1",
     "@monaco-editor/react": "^4.7.0",
-    "@prisma/client": "^6.12.0",
+    "@prisma/adapter-pg": "^7.3.0",
+    "@prisma/client": "^6.19.2",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -49,7 +50,7 @@
     "date-fns-tz": "^3.2.0",
     "devtools-detector": "^2.0.25",
     "dompurify": "^3.2.6",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.1",
     "express": "^5.1.0",
     "highlight.js": "^11.11.1",
     "html2canvas": "^1.4.1",
@@ -65,6 +66,7 @@
     "next": "^15.3.4",
     "next-auth": "^5.0.0-beta.4",
     "next-themes": "^0.4.6",
+    "pg": "^8.17.2",
     "prism-themes": "^1.9.0",
     "prismjs": "^1.30.0",
     "react": "^19.0.0",
@@ -88,15 +90,16 @@
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^6.0.0",
     "@types/node": "^20",
+    "@types/pg": "^8.16.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/ws": "^8.18.1",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
-    "prisma": "^6.12.0",
+    "prisma": "^6.19.2",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
-    "tsx": "^4.20.3",
+    "tsx": "^4.21.0",
     "tw-animate-css": "^1.3.2",
     "typescript": "^5"
   }
