--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "monaco-editor-workers": "^0.45.0",
     "monaco-themes": "^0.4.5",
     "motion": "^12.15.0",
-    "next": "^15.3.4",
+    "next": "15.3.8",
     "next-auth": "^5.0.0-beta.4",
     "next-themes": "^0.4.6",
     "pg": "^8.17.2",
